Continue based on requirement
+ Splash Screen Activity
+ Update CRUD

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -24,23 +24,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nomor"
-                android:textStyle="bold"/>
-            <EditText
-                android:id="@+id/etNomor_Add"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nama"
+                android:text="Nama Peminjam"
                 android:textStyle="bold"/>
             <EditText
                 android:id="@+id/etNama_Add"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:focusable="true"
+                android:focusableInTouchMode="true"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -56,10 +47,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Keterangan"
+                android:text="Keperluan"
                 android:textStyle="bold"/>
             <EditText
-                android:id="@+id/etKeterangan_Add"
+                android:id="@+id/etKeperluan_Add"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapSentences"/>
@@ -73,19 +64,18 @@
                 android:id="@+id/etTglPinjam_Add"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="date"
-                android:focusable="false"/>
+                android:editable="false"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Status"
+                android:text="Tgl. Kembali"
                 android:textStyle="bold"/>
             <EditText
-                android:id="@+id/etStatus_Add"
+                android:id="@+id/etTglKembali_Add"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapSentences"/>
+                android:inputType="date"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
