--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -15,12 +15,59 @@
             android:layout_height="wrap_content"
             android:visibility="gone"/>
         <TextView
+            android:id="@+id/listBarang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:text="Nama Barang"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_margin="5dp"/>
+        <TextView
             android:id="@+id/listNama"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nama Peminjam"
-            android:textSize="18sp"
+            android:textSize="15sp"
+            android:layout_margin="5dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/listTglPinjam"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tgl. Pinjam"
+                android:textSize="15sp"
+                android:layout_margin="5dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="-"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_margin="5dp"/>
+            <TextView
+                android:id="@+id/listTglKembali"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tgl. Kembali"
+                android:textSize="15sp"
+                android:layout_margin="5dp"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/listStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Status"
+            android:textSize="15sp"
             android:textStyle="bold"
-            android:layout_margin="10dp"/>
+            android:layout_margin="5dp"
+            android:layout_gravity="right"
+            android:paddingBottom="10dp"/>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
